[metadata]
name = labmath
version = 2.2.0
author = lucasbrown.cit
author_email = lucasbrown.cit@gmail.com
description = Module for basic math in the general vicinity of computational number theory
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://pypi.org/manage/project/labmath
keywords = math mathematics computational number theory integer factoring factorization primes prime numbers semiprime almost prime almost-prime legendre symbol jacobi symbol kronecker symbol elliptic curve method bpsw miller rabin quadratic frobenius prp sprp lprp slprp xslprp primality testing linear recurrences lucas sequences modular square root generalized Pell equations divisor counting function euler's totient function mobius function möbius function continued fractions partitions stormer's theorem størmer's theorem smooth numbers Dirichlet convolution
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

